--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,12 +3,12 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'OrdinaryPuzzles' do
+target 'OrdinaryPuzzless' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-  target 'OrdinaryPuzzlesTests' do
+  target 'OrdinaryPuzzlessTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -23,10 +23,10 @@ target 'OrdinaryPuzzles' do
   end
 end
 
-target 'OrdinaryPuzzles-tvOS' do
-  # Pods for OrdinaryPuzzles-tvOS
+target 'OrdinaryPuzzless-tvOS' do
+  # Pods for OrdinaryPuzzless-tvOS
 
-  target 'OrdinaryPuzzles-tvOSTests' do
+  target 'OrdinaryPuzzless-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
